<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Favrs</string>
    
    <string name="title_section1">Open Favors</string>
    <string name="title_section2">My Requests</string>
    <string name="title_section3">Accepted Requests</string>
    <string name="title_section4">Groups</string>
    
    <string name="date_picked_text">Pick a Date</string>
    
    <!-- No idea if this is even needed, just hold it for now -->
    <string-array name="sections_array">
        <item>Open Favors</item>
        <item>My Requests</item>
        <item>Accepted Requests</item>
        <item>Groups</item>        
    </string-array>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_a_request">+</string>
    <string name="action_settings">Settings</string>
    
    <string name="detailed_text_field_1">Fill Me</string>
    <string name="detailed_text_field_2">Fill Me</string>
    <string name="detailed_text_field_3">Fill Me</string>
 	<string name="detailed_text_field_4">Fill Me</string>
    <string name="detailed_text_field_5">Fill Me</string>
                
                    

</resources>
